# BitTest

./: .gitignore  CMakeLists.txt  LICENSE  run
include/BitTest/: Assertions.hpp  BitTest.hpp  TestCase.hpp  TestRegistry.hpp  TestRunner.hpp
include/BitTest/types/: SessionState.hpp
tests/: main.cpp
